css/modal.css
/* The Covid-19 Banner */
#covid-19-banner {
  padding: 0.5em 1em;
  background-color:#bf0000;
  color: white;
  display: flex;
  justify-content: flex-end;
}

.notice-content {
  flex-grow: 5;
  align-self: flex-start;
  margin: auto;
}

.close-banner {
  font-size: 1.5em;
  font-weight: bold;

}

#btn-read-more {
  display:inline-block;
  margin: 0 1.5em;
  background-color: #fff;
  border: 2px solid #fff;
  padding: 0.5em 1em;
  border-radius: 0.12em;
  cursor: pointer;
  color: #353535;
}

#btn-read-more:hover {
  background-color: #bf0000; 
  color: white;
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  position: fixed; /* Stay in place */
  left: 20vw;
  top:0;
  color: #000;
  text-align: left;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  overflow: auto;
  width: 50%;
  max-height: 80%;
}

/* The Close Button */
.close-modal {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.modal li {
  font-size: 1rem;
}

